--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,98 @@
+aiohttp==3.8.6
+aiosignal==1.3.1
+aiostream==0.5.2
+annotated-types==0.7.0
+anyio==4.5.2
+async-timeout==4.0.3
+attrs==25.2.0
+backoff==2.2.1
+beautifulsoup4==4.12.2
+boto3==1.35.20
+botocore==1.35.20
+bs4==0.0.1
 certifi==2024.8.30
 charset-normalizer==3.4.0
+click==8.1.8
+dataclasses-json==0.5.14
+decorator==5.2.1
+Deprecated==1.2.18
+distro==1.9.0
 dnspython==2.6.1
 exceptiongroup==1.2.2
+frozenlist==1.5.0
+fsspec==2025.3.0
+fuzzysearch==0.7.3
+fuzzywuzzy==0.18.0
+greenlet==3.1.1
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
 idna==3.10
 iniconfig==2.0.0
+jiter==0.9.0
+jmespath==1.0.1
+joblib==1.4.2
+jsonpatch==1.33
+jsonpointer==3.0.0
+keepa==1.3.8
+langchain==0.2.17
+langchain-core==0.2.43
+langchain-text-splitters==0.2.4
+langsmith==0.1.147
+llama-index==0.8.67
+loguru==0.7.3
+marshmallow==3.22.0
+multidict==6.1.0
+mypy-extensions==1.0.0
+nest-asyncio==1.6.0
+nltk==3.9.1
+numpy==1.24.4
+openai==1.58.1
+orjson==3.10.15
+outcome==1.3.0.post0
 packaging==24.1
+pandas==2.0.3
 pluggy==1.5.0
+propcache==0.2.0
+pydantic==2.10.6
+pydantic_core==2.27.2
 pymongo==4.10.1
+PySocks==1.7.1
 pytest==8.3.3
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+pytz==2024.2
+PyYAML==6.0.2
+regex==2023.10.3
 requests==2.32.3
+requests-toolbelt==1.0.0
+s3transfer==0.10.4
+scikit-learn==1.3.2
+scipy==1.10.1
+scrapfly-sdk==0.8.10
+scrapingbee==2.0.1
+selenium==4.15.2
+six==1.17.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.6
+SQLAlchemy==2.0.39
+tenacity==8.5.0
+threadpoolctl==3.5.0
+tiktoken==0.7.0
 tomli==2.0.2
-urllib3==2.2.3
+tqdm==4.67.1
+trio==0.27.0
+trio-websocket==0.12.2
+typing-inspect==0.9.0
+typing_extensions==4.12.2
+tzdata==2024.2
+urllib3==1.26.20
+wrapt==1.17.2
+wsproto==1.2.0
+yarl==1.15.2
+langchain==0.0.334
+tldextract==5.1.2
+python-amazon-sp-api==1.9.10
+cryptography==42.0.2
+redis==5.0.1
